--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.3.1",
     "@vercel/postgres": "^0.9.0",
+    "auth": "^1.2.3",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -80,6 +81,7 @@
     "typescript": "^5"
   },
   "overrides": {
-    "@esbuild-kit/esm-loader": "npm:tsx@^4.20.6"
+    "@esbuild-kit/esm-loader": "npm:tsx@^4.20.6",
+    "tmp": ">=0.2.4"
   }
 }
